RESOLVED FIXED 243183
[LFC][IFC] Inline box decoration end may get positioned incorrectly at line breaking
https://bugs.webkit.org/show_bug.cgi?id=243183
Summary [LFC][IFC] Inline box decoration end may get positioned incorrectly at line b...
alan
Reported 2022-07-25 16:49:47 PDT
ssia
Attachments
Patch (4.67 KB, patch)
2022-07-25 17:02 PDT, alan
no flags
alan
Comment 1 2022-07-25 17:02:52 PDT
EWS
Comment 2 2022-07-26 06:31:21 PDT
Committed 252820@main (bac51dd78abc): <https://commits.webkit.org/252820@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461206 [details].
Note You need to log in before you can comment on or make changes to this bug.