[LFC][IFC] Inline box decoration end may get positioned incorrectly at line breaking https://bugs.webkit.org/show_bug.cgi?id=243183

Reviewed by Antti Koivisto.

When the inline box end is overflowing the line (e.g. <span border-right: 100px>non_overflowing_text_but_overflowing_border_right</span>) we should keep it together with the associated content. Normally when an overflowing run in not breakable (e.g. text with certain styles) we try to go back on the continuous content and find a previous breaking position by calling tryBreakingPreviousNonOverflowingRuns(). However we should let this function find the overflowing run when the only breaking position is between the content and the inline box end (e.g. text</span>).

* LayoutTests/fast/inline/inline-box-with-decoration-end-on-narrow-line-expected.html: Added.
* LayoutTests/fast/inline/inline-box-with-decoration-end-on-narrow-line.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::tryBreakingPreviousNonOverflowingRuns const):

Canonical link: https://commits.webkit.org/252820@main